#9 Updated NSProduct, NSProject, and remainding NSP* classes

--- a/docs/api-reference/CRMScript.NetServer.NSContact.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSContact.yml
@@ -89,7 +89,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: The number of active erp links
+      description: The number of active ERP links
   example: 
   - "\n<pre><code>NSContact thing;\nInteger activeErpLinks = thing.GetActiveErpLinks();</code></pre>\n"
 - uid: CRMScript.NetServer.NSContact.GetAddress()
@@ -529,7 +529,7 @@ items:
     parameters:
     - id: activeErpLinks
       type: CRMScript.Global.Integer
-      description: The number of active erp links
+      description: The number of active ERP links
     return:
       type: CRMScript.Global.Void
   example: 
