--- a/docs/api-reference/CRMScript.NetServer.NSContactEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSContactEntity.yml
@@ -131,7 +131,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: The number of active erp links
+      description: The number of active ERP links
   example: 
   - "\n<pre><code>NSContactEntity thing;\nInteger activeErpLinks = thing.GetActiveErpLinks();</code></pre>\n"
 - uid: CRMScript.NetServer.NSContactEntity.GetActiveInterests()
@@ -991,7 +991,7 @@ items:
     parameters:
     - id: activeErpLinks
       type: CRMScript.Global.Integer
-      description: The number of active erp links
+      description: The number of active ERP links
     return:
       type: CRMScript.Global.Void
   example: 
