--- a/docs/api-reference/CRMScript.NetServer.NSPreference.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSPreference.yml
@@ -140,7 +140,7 @@ items:
   nameWithType: NSPreference.GetPrefDescId()
   fullName: CRMScript.NetServer.NSPreference.GetPrefDescId()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetPrefDescId()
@@ -160,7 +160,7 @@ items:
   nameWithType: NSPreference.GetRawValue()
   fullName: CRMScript.NetServer.NSPreference.GetRawValue()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: String GetRawValue()
@@ -180,7 +180,7 @@ items:
   nameWithType: NSPreference.GetSpecification()
   fullName: CRMScript.NetServer.NSPreference.GetSpecification()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: NSPreferenceSpec GetSpecification()
@@ -200,7 +200,7 @@ items:
   nameWithType: NSPreference.GetTableName()
   fullName: CRMScript.NetServer.NSPreference.GetTableName()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: String GetTableName()
@@ -239,7 +239,7 @@ items:
   nameWithType: NSPreference.GetTargetId()
   fullName: CRMScript.NetServer.NSPreference.GetTargetId()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetTargetId()
@@ -259,7 +259,7 @@ items:
   nameWithType: NSPreference.GetUserPreferenceId()
   fullName: CRMScript.NetServer.NSPreference.GetUserPreferenceId()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetUserPreferenceId()
@@ -301,8 +301,8 @@ items:
   nameWithType: NSPreference.SetDisplayType(Integer)
   fullName: CRMScript.NetServer.NSPreference.SetDisplayType(Integer)
   type: Method
-  summary: "\n\n"
-  remarks: "\n<p></p>\n"
+  summary: ""
+  remarks: ""
   syntax: 
     content: Void SetDisplayType(Integer displayType)
     parameters:
@@ -367,7 +367,7 @@ items:
   nameWithType: NSPreference.SetPrefDescId(Integer)
   fullName: CRMScript.NetServer.NSPreference.SetPrefDescId(Integer)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetPrefDescId(Integer prefDescId)
@@ -389,7 +389,7 @@ items:
   nameWithType: NSPreference.SetRawValue(String)
   fullName: CRMScript.NetServer.NSPreference.SetRawValue(String)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetRawValue(String rawValue)
@@ -411,7 +411,7 @@ items:
   nameWithType: NSPreference.SetSpecification(NSPreferenceSpec)
   fullName: CRMScript.NetServer.NSPreference.SetSpecification(NSPreferenceSpec)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetSpecification(NSPreferenceSpec specification)
@@ -433,7 +433,7 @@ items:
   nameWithType: NSPreference.SetTableName(String)
   fullName: CRMScript.NetServer.NSPreference.SetTableName(String)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetTableName(String tableName)
@@ -477,7 +477,7 @@ items:
   nameWithType: NSPreference.SetTargetId(Integer)
   fullName: CRMScript.NetServer.NSPreference.SetTargetId(Integer)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetTargetId(Integer targetId)
@@ -499,7 +499,7 @@ items:
   nameWithType: NSPreference.SetUserPreferenceId(Integer)
   fullName: CRMScript.NetServer.NSPreference.SetUserPreferenceId(Integer)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetUserPreferenceId(Integer userPreferenceId)
