--- a/docs/api-reference/CRMScript.NetServer.NSPreferenceAgent.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSPreferenceAgent.yml
@@ -422,7 +422,7 @@ items:
   fullName: CRMScript.NetServer.NSPreferenceAgent.GetPreferenceByName(String,String,Integer)
   type: Method
   summary: "\nGets a preference by name\n"
-  remarks: "\n<p></p>\n"
+  remarks: ""
   syntax: 
     content: NSPreference GetPreferenceByName(String prefSection, String prefKey, Integer prefLevel)
     parameters:
