--- a/docs/api-reference/CRMScript.NetServer.NSPreferenceSpec.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSPreferenceSpec.yml
@@ -42,7 +42,7 @@ items:
   nameWithType: NSPreferenceSpec.GetKey()
   fullName: CRMScript.NetServer.NSPreferenceSpec.GetKey()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: String GetKey()
@@ -62,7 +62,7 @@ items:
   nameWithType: NSPreferenceSpec.GetSection()
   fullName: CRMScript.NetServer.NSPreferenceSpec.GetSection()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: String GetSection()
@@ -82,7 +82,7 @@ items:
   nameWithType: NSPreferenceSpec.SetKey(String)
   fullName: CRMScript.NetServer.NSPreferenceSpec.SetKey(String)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetKey(String key)
@@ -104,7 +104,7 @@ items:
   nameWithType: NSPreferenceSpec.SetSection(String)
   fullName: CRMScript.NetServer.NSPreferenceSpec.SetSection(String)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetSection(String section)
