--- a/docs/api-reference/CRMScript.NetServer.NSPreviewMailing.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSPreviewMailing.yml
@@ -68,7 +68,7 @@ items:
   nameWithType: NSPreviewMailing.GetContactId()
   fullName: CRMScript.NetServer.NSPreviewMailing.GetContactId()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetContactId()
@@ -88,7 +88,7 @@ items:
   nameWithType: NSPreviewMailing.GetContactName()
   fullName: CRMScript.NetServer.NSPreviewMailing.GetContactName()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: String GetContactName()
@@ -108,7 +108,7 @@ items:
   nameWithType: NSPreviewMailing.GetDocumentMessageId()
   fullName: CRMScript.NetServer.NSPreviewMailing.GetDocumentMessageId()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetDocumentMessageId()
@@ -128,7 +128,7 @@ items:
   nameWithType: NSPreviewMailing.GetFromAddress()
   fullName: CRMScript.NetServer.NSPreviewMailing.GetFromAddress()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: String GetFromAddress()
@@ -148,7 +148,7 @@ items:
   nameWithType: NSPreviewMailing.GetLinkClicks()
   fullName: CRMScript.NetServer.NSPreviewMailing.GetLinkClicks()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetLinkClicks()
@@ -168,7 +168,7 @@ items:
   nameWithType: NSPreviewMailing.GetMessageId()
   fullName: CRMScript.NetServer.NSPreviewMailing.GetMessageId()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetMessageId()
@@ -188,7 +188,7 @@ items:
   nameWithType: NSPreviewMailing.GetMessageSubject()
   fullName: CRMScript.NetServer.NSPreviewMailing.GetMessageSubject()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: String GetMessageSubject()
@@ -208,7 +208,7 @@ items:
   nameWithType: NSPreviewMailing.GetOpened()
   fullName: CRMScript.NetServer.NSPreviewMailing.GetOpened()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: DateTime GetOpened()
@@ -228,7 +228,7 @@ items:
   nameWithType: NSPreviewMailing.GetPersonFullName()
   fullName: CRMScript.NetServer.NSPreviewMailing.GetPersonFullName()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: String GetPersonFullName()
@@ -248,7 +248,7 @@ items:
   nameWithType: NSPreviewMailing.GetPersonId()
   fullName: CRMScript.NetServer.NSPreviewMailing.GetPersonId()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetPersonId()
@@ -268,7 +268,7 @@ items:
   nameWithType: NSPreviewMailing.GetSendingTime()
   fullName: CRMScript.NetServer.NSPreviewMailing.GetSendingTime()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: DateTime GetSendingTime()
@@ -288,7 +288,7 @@ items:
   nameWithType: NSPreviewMailing.GetShipmentDescription()
   fullName: CRMScript.NetServer.NSPreviewMailing.GetShipmentDescription()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: String GetShipmentDescription()
@@ -308,7 +308,7 @@ items:
   nameWithType: NSPreviewMailing.GetShipmentId()
   fullName: CRMScript.NetServer.NSPreviewMailing.GetShipmentId()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetShipmentId()
@@ -328,7 +328,7 @@ items:
   nameWithType: NSPreviewMailing.GetShipmentType()
   fullName: CRMScript.NetServer.NSPreviewMailing.GetShipmentType()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: String GetShipmentType()
@@ -368,7 +368,7 @@ items:
   nameWithType: NSPreviewMailing.SetContactId(Integer)
   fullName: CRMScript.NetServer.NSPreviewMailing.SetContactId(Integer)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetContactId(Integer contactId)
@@ -390,7 +390,7 @@ items:
   nameWithType: NSPreviewMailing.SetContactName(String)
   fullName: CRMScript.NetServer.NSPreviewMailing.SetContactName(String)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetContactName(String contactName)
@@ -412,7 +412,7 @@ items:
   nameWithType: NSPreviewMailing.SetDocumentMessageId(Integer)
   fullName: CRMScript.NetServer.NSPreviewMailing.SetDocumentMessageId(Integer)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetDocumentMessageId(Integer documentMessageId)
@@ -434,7 +434,7 @@ items:
   nameWithType: NSPreviewMailing.SetFromAddress(String)
   fullName: CRMScript.NetServer.NSPreviewMailing.SetFromAddress(String)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetFromAddress(String fromAddress)
@@ -456,7 +456,7 @@ items:
   nameWithType: NSPreviewMailing.SetLinkClicks(Integer)
   fullName: CRMScript.NetServer.NSPreviewMailing.SetLinkClicks(Integer)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetLinkClicks(Integer linkClicks)
@@ -478,7 +478,7 @@ items:
   nameWithType: NSPreviewMailing.SetMessageId(Integer)
   fullName: CRMScript.NetServer.NSPreviewMailing.SetMessageId(Integer)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetMessageId(Integer messageId)
@@ -500,7 +500,7 @@ items:
   nameWithType: NSPreviewMailing.SetMessageSubject(String)
   fullName: CRMScript.NetServer.NSPreviewMailing.SetMessageSubject(String)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetMessageSubject(String messageSubject)
@@ -522,7 +522,7 @@ items:
   nameWithType: NSPreviewMailing.SetOpened(DateTime)
   fullName: CRMScript.NetServer.NSPreviewMailing.SetOpened(DateTime)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetOpened(DateTime opened)
@@ -544,7 +544,7 @@ items:
   nameWithType: NSPreviewMailing.SetPersonFullName(String)
   fullName: CRMScript.NetServer.NSPreviewMailing.SetPersonFullName(String)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetPersonFullName(String personFullName)
@@ -566,7 +566,7 @@ items:
   nameWithType: NSPreviewMailing.SetPersonId(Integer)
   fullName: CRMScript.NetServer.NSPreviewMailing.SetPersonId(Integer)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetPersonId(Integer personId)
@@ -588,7 +588,7 @@ items:
   nameWithType: NSPreviewMailing.SetSendingTime(DateTime)
   fullName: CRMScript.NetServer.NSPreviewMailing.SetSendingTime(DateTime)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetSendingTime(DateTime )
@@ -610,7 +610,7 @@ items:
   nameWithType: NSPreviewMailing.SetShipmentDescription(String)
   fullName: CRMScript.NetServer.NSPreviewMailing.SetShipmentDescription(String)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetShipmentDescription(String shipmentDescription)
@@ -632,7 +632,7 @@ items:
   nameWithType: NSPreviewMailing.SetShipmentId(Integer)
   fullName: CRMScript.NetServer.NSPreviewMailing.SetShipmentId(Integer)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetShipmentId(Integer shipmentId)
@@ -654,7 +654,7 @@ items:
   nameWithType: NSPreviewMailing.SetShipmentType(String)
   fullName: CRMScript.NetServer.NSPreviewMailing.SetShipmentType(String)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetShipmentType(String shipmentType)
@@ -676,7 +676,7 @@ items:
   nameWithType: NSPreviewMailing.SetStatus(Integer)
   fullName: CRMScript.NetServer.NSPreviewMailing.SetStatus(Integer)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks:
   syntax: 
     content: Void SetStatus(Integer status)
