--- a/docs/api-reference/CRMScript.NetServer.NSPreviewMailingHeader.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSPreviewMailingHeader.yml
@@ -68,7 +68,7 @@ items:
   nameWithType: NSPreviewMailingHeader.GetDocumentMessageId()
   fullName: CRMScript.NetServer.NSPreviewMailingHeader.GetDocumentMessageId()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetDocumentMessageId()
@@ -88,7 +88,7 @@ items:
   nameWithType: NSPreviewMailingHeader.GetFromAddress()
   fullName: CRMScript.NetServer.NSPreviewMailingHeader.GetFromAddress()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: String GetFromAddress()
@@ -128,7 +128,7 @@ items:
   nameWithType: NSPreviewMailingHeader.GetMessageSubject()
   fullName: CRMScript.NetServer.NSPreviewMailingHeader.GetMessageSubject()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: String GetMessageSubject()
@@ -148,7 +148,7 @@ items:
   nameWithType: NSPreviewMailingHeader.GetNumBounced()
   fullName: CRMScript.NetServer.NSPreviewMailingHeader.GetNumBounced()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetNumBounced()
@@ -188,7 +188,7 @@ items:
   nameWithType: NSPreviewMailingHeader.GetNumOpened()
   fullName: CRMScript.NetServer.NSPreviewMailingHeader.GetNumOpened()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetNumOpened()
@@ -208,7 +208,7 @@ items:
   nameWithType: NSPreviewMailingHeader.GetNumSent()
   fullName: CRMScript.NetServer.NSPreviewMailingHeader.GetNumSent()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetNumSent()
@@ -248,7 +248,7 @@ items:
   nameWithType: NSPreviewMailingHeader.GetPersonId()
   fullName: CRMScript.NetServer.NSPreviewMailingHeader.GetPersonId()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetPersonId()
@@ -268,7 +268,7 @@ items:
   nameWithType: NSPreviewMailingHeader.GetShipmentDescription()
   fullName: CRMScript.NetServer.NSPreviewMailingHeader.GetShipmentDescription()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: String GetShipmentDescription()
@@ -288,7 +288,7 @@ items:
   nameWithType: NSPreviewMailingHeader.GetShipmentId()
   fullName: CRMScript.NetServer.NSPreviewMailingHeader.GetShipmentId()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetShipmentId()
@@ -308,7 +308,7 @@ items:
   nameWithType: NSPreviewMailingHeader.GetShipmentType()
   fullName: CRMScript.NetServer.NSPreviewMailingHeader.GetShipmentType()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: String GetShipmentType()
@@ -328,7 +328,7 @@ items:
   nameWithType: NSPreviewMailingHeader.GetStartDate()
   fullName: CRMScript.NetServer.NSPreviewMailingHeader.GetStartDate()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: DateTime GetStartDate()
@@ -368,7 +368,7 @@ items:
   nameWithType: NSPreviewMailingHeader.SetDocumentMessageId(Integer)
   fullName: CRMScript.NetServer.NSPreviewMailingHeader.SetDocumentMessageId(Integer)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetDocumentMessageId(Integer documentMessageId)
@@ -390,7 +390,7 @@ items:
   nameWithType: NSPreviewMailingHeader.SetFromAddress(String)
   fullName: CRMScript.NetServer.NSPreviewMailingHeader.SetFromAddress(String)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetFromAddress(String fromAddress)
@@ -412,7 +412,7 @@ items:
   nameWithType: NSPreviewMailingHeader.SetMessageId(Integer)
   fullName: CRMScript.NetServer.NSPreviewMailingHeader.SetMessageId(Integer)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetMessageId(Integer messageId)
@@ -434,7 +434,7 @@ items:
   nameWithType: NSPreviewMailingHeader.SetMessageSubject(String)
   fullName: CRMScript.NetServer.NSPreviewMailingHeader.SetMessageSubject(String)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetMessageSubject(String messageSubject)
@@ -456,7 +456,7 @@ items:
   nameWithType: NSPreviewMailingHeader.SetNumBounced(Integer)
   fullName: CRMScript.NetServer.NSPreviewMailingHeader.SetNumBounced(Integer)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetNumBounced(Integer numBounced)
@@ -478,7 +478,7 @@ items:
   nameWithType: NSPreviewMailingHeader.SetNumClicks(Integer)
   fullName: CRMScript.NetServer.NSPreviewMailingHeader.SetNumClicks(Integer)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetNumClicks(Integer numClicks)
@@ -500,7 +500,7 @@ items:
   nameWithType: NSPreviewMailingHeader.SetNumOpened(Integer)
   fullName: CRMScript.NetServer.NSPreviewMailingHeader.SetNumOpened(Integer)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetNumOpened(Integer numOpened)
@@ -522,7 +522,7 @@ items:
   nameWithType: NSPreviewMailingHeader.SetNumSent(Integer)
   fullName: CRMScript.NetServer.NSPreviewMailingHeader.SetNumSent(Integer)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetNumSent(Integer numSent)
@@ -566,7 +566,7 @@ items:
   nameWithType: NSPreviewMailingHeader.SetPersonId(Integer)
   fullName: CRMScript.NetServer.NSPreviewMailingHeader.SetPersonId(Integer)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetPersonId(Integer personId)
@@ -588,7 +588,7 @@ items:
   nameWithType: NSPreviewMailingHeader.SetShipmentDescription(String)
   fullName: CRMScript.NetServer.NSPreviewMailingHeader.SetShipmentDescription(String)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetShipmentDescription(String shipmentDescription)
@@ -610,7 +610,7 @@ items:
   nameWithType: NSPreviewMailingHeader.SetShipmentId(Integer)
   fullName: CRMScript.NetServer.NSPreviewMailingHeader.SetShipmentId(Integer)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetShipmentId(Integer shipmentId)
@@ -632,7 +632,7 @@ items:
   nameWithType: NSPreviewMailingHeader.SetShipmentType(String)
   fullName: CRMScript.NetServer.NSPreviewMailingHeader.SetShipmentType(String)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetShipmentType(String shipmentType)
@@ -654,7 +654,7 @@ items:
   nameWithType: NSPreviewMailingHeader.SetStartDate(DateTime)
   fullName: CRMScript.NetServer.NSPreviewMailingHeader.SetStartDate(DateTime)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetStartDate(DateTime startDate)
@@ -676,8 +676,8 @@ items:
   nameWithType: NSPreviewMailingHeader.SetStatus(Integer)
   fullName: CRMScript.NetServer.NSPreviewMailingHeader.SetStatus(Integer)
   type: Method
-  summary: "\n\n"
-  remarks: "\n<p></p>\n"
+  summary: ""
+  remarks: ""
   syntax: 
     content: Void SetStatus(Integer status)
     parameters:
