--- a/docs/api-reference/CRMScript.NetServer.NSPreviews.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSPreviews.yml
@@ -23,7 +23,7 @@ items:
   nameWithType: NSPreviews.#ctor
   fullName: CRMScript.NetServer.NSPreviews.#ctor
   type: Constructor
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: NSPreviews
