--- a/docs/api-reference/CRMScript.NetServer.NSPreviewsAgent.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSPreviewsAgent.yml
@@ -25,7 +25,7 @@ items:
   nameWithType: NSPreviewsAgent.#ctor
   fullName: CRMScript.NetServer.NSPreviewsAgent.#ctor
   type: Constructor
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: NSPreviewsAgent
