--- a/docs/api-reference/CRMScript.NetServer.NSProductCategory.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSProductCategory.yml
@@ -6,10 +6,10 @@ items:
   langs:
   - crmscript
   children:
+  - CRMScript.NetServer.NSProductCategory.#ctor
   - CRMScript.NetServer.NSProductCategory.GetId()
   - CRMScript.NetServer.NSProductCategory.GetTooltip()
   - CRMScript.NetServer.NSProductCategory.GetValue()
-  - CRMScript.NetServer.NSProductCategory.#ctor
   - CRMScript.NetServer.NSProductCategory.SetId(Integer)
   - CRMScript.NetServer.NSProductCategory.SetTooltip(String)
   - CRMScript.NetServer.NSProductCategory.SetValue(String)
@@ -19,66 +19,6 @@ items:
   type: Class
   summary: 
   example: 
-- uid: CRMScript.NetServer.NSProductCategory.GetId()
-  commentId: M:CRMScript.NetServer.NSProductCategory.GetId()
-  id: 'GetId()'
-  so.intellisense: NSProductCategory.GetId
-  langs:
-  - crmscript
-  name: 'GetId()'
-  nameWithType: NSProductCategory.GetId()
-  fullName: CRMScript.NetServer.NSProductCategory.GetId()
-  type: Method
-  summary: "\nGets the primary key (ID) for the NSProductCategory<p></p>\n<strong>Returns:</strong>Integer NSProductCategory id.<p></p>\n<pre><code>NSProductCategory thing;\nInteger id = thing.GetId();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: Integer GetId()
-    parameters: []
-    return:
-      type: CRMScript.Global.Integer
-      description:
-  example: 
-  - "\n<pre><code>NSProductCategory thing;\nInteger id = thing.GetId();</code></pre>\n"
-- uid: CRMScript.NetServer.NSProductCategory.GetTooltip()
-  commentId: M:CRMScript.NetServer.NSProductCategory.GetTooltip()
-  id: 'GetTooltip()'
-  so.intellisense: NSProductCategory.GetTooltip
-  langs:
-  - crmscript
-  name: 'GetTooltip()'
-  nameWithType: NSProductCategory.GetTooltip()
-  fullName: CRMScript.NetServer.NSProductCategory.GetTooltip()
-  type: Method
-  summary: "\nGets the tooltip description for the NSProductCategory list item.<p></p>\n<strong>Returns:</strong>String NSProductCategory tooltip description.<p></p>\n<pre><code>NSProductCategory thing;\nString descr = thing.GetTooltip();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: String GetTooltip()
-    parameters: []
-    return:
-      type: CRMScript.Global.String
-      description:
-  example: 
-  - "\n<pre><code>NSProductCategory thing;\nString descr = thing.GetTooltip();</code></pre>\n"
-- uid: CRMScript.NetServer.NSProductCategory.GetValue()
-  commentId: M:CRMScript.NetServer.NSProductCategory.GetValue()
-  id: 'GetValue()'
-  so.intellisense: NSProductCategory.GetValue
-  langs:
-  - crmscript
-  name: 'GetValue()'
-  nameWithType: NSProductCategory.GetValue()
-  fullName: CRMScript.NetServer.NSProductCategory.GetValue()
-  type: Method
-  summary: "\nGets the name of the NSProductCategory.<p></p>\n<strong>Returns:</strong>String NSProductCategory name.<p></p>\n<pre><code>NSProductCategory thing;\nString name = thing.GetValue();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: String GetValue()
-    parameters: []
-    return:
-      type: CRMScript.Global.String
-      description:
-  example: 
-  - "\n<pre><code>NSProductCategory thing;\nString name = thing.GetValue();</code></pre>\n"
 - uid: CRMScript.NetServer.NSProductCategory.#ctor
   commentId: M:CRMScript.NetServer.NSProductCategory.#ctor
   id: '#ctor'
@@ -94,6 +34,66 @@ items:
   syntax: 
     content: NSProductCategory
   example: 
+- uid: CRMScript.NetServer.NSProductCategory.GetId()
+  commentId: M:CRMScript.NetServer.NSProductCategory.GetId()
+  id: 'GetId()'
+  so.intellisense: NSProductCategory.GetId
+  langs:
+  - crmscript
+  name: 'GetId()'
+  nameWithType: NSProductCategory.GetId()
+  fullName: CRMScript.NetServer.NSProductCategory.GetId()
+  type: Method
+  summary: "\nGets the primary key (ID) for the NSProductCategory\n"
+  remarks: 
+  syntax: 
+    content: Integer GetId()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+      description: NSProductCategory ID
+  example: 
+  - "\n<pre><code>NSProductCategory thing;\nInteger id = thing.GetId();</code></pre>\n"
+- uid: CRMScript.NetServer.NSProductCategory.GetTooltip()
+  commentId: M:CRMScript.NetServer.NSProductCategory.GetTooltip()
+  id: 'GetTooltip()'
+  so.intellisense: NSProductCategory.GetTooltip
+  langs:
+  - crmscript
+  name: 'GetTooltip()'
+  nameWithType: NSProductCategory.GetTooltip()
+  fullName: CRMScript.NetServer.NSProductCategory.GetTooltip()
+  type: Method
+  summary: "\nGets the tooltip description for the NSProductCategory list item.\n"
+  remarks: 
+  syntax: 
+    content: String GetTooltip()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: NSProductCategory tooltip description
+  example: 
+  - "\n<pre><code>NSProductCategory thing;\nString descr = thing.GetTooltip();</code></pre>\n"
+- uid: CRMScript.NetServer.NSProductCategory.GetValue()
+  commentId: M:CRMScript.NetServer.NSProductCategory.GetValue()
+  id: 'GetValue()'
+  so.intellisense: NSProductCategory.GetValue
+  langs:
+  - crmscript
+  name: 'GetValue()'
+  nameWithType: NSProductCategory.GetValue()
+  fullName: CRMScript.NetServer.NSProductCategory.GetValue()
+  type: Method
+  summary: "\nGets the name of the NSProductCategory.\n"
+  remarks: 
+  syntax: 
+    content: String GetValue()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: NSProductCategory name
+  example: 
+  - "\n<pre><code>NSProductCategory thing;\nString name = thing.GetValue();</code></pre>\n"
 - uid: CRMScript.NetServer.NSProductCategory.SetId(Integer)
   commentId: M:CRMScript.NetServer.NSProductCategory.SetId(Integer)
   id: 'SetId(Integer)'
