--- a/docs/api-reference/CRMScript.NetServer.NSProductFamily.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSProductFamily.yml
@@ -6,10 +6,10 @@ items:
   langs:
   - crmscript
   children:
+  - CRMScript.NetServer.NSProductFamily.#ctor
   - CRMScript.NetServer.NSProductFamily.GetId()
   - CRMScript.NetServer.NSProductFamily.GetTooltip()
   - CRMScript.NetServer.NSProductFamily.GetValue()
-  - CRMScript.NetServer.NSProductFamily.#ctor
   - CRMScript.NetServer.NSProductFamily.SetId(Integer)
   - CRMScript.NetServer.NSProductFamily.SetTooltip(String)
   - CRMScript.NetServer.NSProductFamily.SetValue(String)
@@ -19,66 +19,6 @@ items:
   type: Class
   summary: 
   example: 
-- uid: CRMScript.NetServer.NSProductFamily.GetId()
-  commentId: M:CRMScript.NetServer.NSProductFamily.GetId()
-  id: 'GetId()'
-  so.intellisense: NSProductFamily.GetId
-  langs:
-  - crmscript
-  name: 'GetId()'
-  nameWithType: NSProductFamily.GetId()
-  fullName: CRMScript.NetServer.NSProductFamily.GetId()
-  type: Method
-  summary: "\nGets the primary key (ID) for the NSProductFamily<p></p>\n<strong>Returns:</strong>Integer NSProductFamily id.<p></p>\n<pre><code>NSProductFamily thing;\nInteger id = thing.GetId();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: Integer GetId()
-    parameters: []
-    return:
-      type: CRMScript.Global.Integer
-      description:
-  example: 
-  - "\n<pre><code>NSProductFamily thing;\nInteger id = thing.GetId();</code></pre>\n"
-- uid: CRMScript.NetServer.NSProductFamily.GetTooltip()
-  commentId: M:CRMScript.NetServer.NSProductFamily.GetTooltip()
-  id: 'GetTooltip()'
-  so.intellisense: NSProductFamily.GetTooltip
-  langs:
-  - crmscript
-  name: 'GetTooltip()'
-  nameWithType: NSProductFamily.GetTooltip()
-  fullName: CRMScript.NetServer.NSProductFamily.GetTooltip()
-  type: Method
-  summary: "\nGets the tooltip description for the NSProductFamily list item.<p></p>\n<strong>Returns:</strong>String NSProductFamily tooltip description.<p></p>\n<pre><code>NSProductFamily thing;\nString descr = thing.GetTooltip();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: String GetTooltip()
-    parameters: []
-    return:
-      type: CRMScript.Global.String
-      description:
-  example: 
-  - "\n<pre><code>NSProductFamily thing;\nString descr = thing.GetTooltip();</code></pre>\n"
-- uid: CRMScript.NetServer.NSProductFamily.GetValue()
-  commentId: M:CRMScript.NetServer.NSProductFamily.GetValue()
-  id: 'GetValue()'
-  so.intellisense: NSProductFamily.GetValue
-  langs:
-  - crmscript
-  name: 'GetValue()'
-  nameWithType: NSProductFamily.GetValue()
-  fullName: CRMScript.NetServer.NSProductFamily.GetValue()
-  type: Method
-  summary: "\nGets the name of the NSProductFamily.<p></p>\n<strong>Returns:</strong>String NSProductFamily name.<p></p>\n<pre><code>NSProductFamily thing;\nString name = thing.GetValue();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: String GetValue()
-    parameters: []
-    return:
-      type: CRMScript.Global.String
-      description:
-  example: 
-  - "\n<pre><code>NSProductFamily thing;\nString name = thing.GetValue();</code></pre>\n"
 - uid: CRMScript.NetServer.NSProductFamily.#ctor
   commentId: M:CRMScript.NetServer.NSProductFamily.#ctor
   id: '#ctor'
@@ -94,6 +34,66 @@ items:
   syntax: 
     content: NSProductFamily
   example: 
+- uid: CRMScript.NetServer.NSProductFamily.GetId()
+  commentId: M:CRMScript.NetServer.NSProductFamily.GetId()
+  id: 'GetId()'
+  so.intellisense: NSProductFamily.GetId
+  langs:
+  - crmscript
+  name: 'GetId()'
+  nameWithType: NSProductFamily.GetId()
+  fullName: CRMScript.NetServer.NSProductFamily.GetId()
+  type: Method
+  summary: "\nGets the primary key (ID) for the NSProductFamily.\n"
+  remarks: 
+  syntax: 
+    content: Integer GetId()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+      description: NSProductFamily ID
+  example: 
+  - "\n<pre><code>NSProductFamily thing;\nInteger id = thing.GetId();</code></pre>\n"
+- uid: CRMScript.NetServer.NSProductFamily.GetTooltip()
+  commentId: M:CRMScript.NetServer.NSProductFamily.GetTooltip()
+  id: 'GetTooltip()'
+  so.intellisense: NSProductFamily.GetTooltip
+  langs:
+  - crmscript
+  name: 'GetTooltip()'
+  nameWithType: NSProductFamily.GetTooltip()
+  fullName: CRMScript.NetServer.NSProductFamily.GetTooltip()
+  type: Method
+  summary: "\nGets the tooltip description for the NSProductFamily list item.\n"
+  remarks: 
+  syntax: 
+    content: String GetTooltip()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: NSProductFamily tooltip description
+  example: 
+  - "\n<pre><code>NSProductFamily thing;\nString descr = thing.GetTooltip();</code></pre>\n"
+- uid: CRMScript.NetServer.NSProductFamily.GetValue()
+  commentId: M:CRMScript.NetServer.NSProductFamily.GetValue()
+  id: 'GetValue()'
+  so.intellisense: NSProductFamily.GetValue
+  langs:
+  - crmscript
+  name: 'GetValue()'
+  nameWithType: NSProductFamily.GetValue()
+  fullName: CRMScript.NetServer.NSProductFamily.GetValue()
+  type: Method
+  summary: "\nGets the name of the NSProductFamily.\n"
+  remarks: 
+  syntax: 
+    content: String GetValue()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: NSProductFamily name
+  example: 
+  - "\n<pre><code>NSProductFamily thing;\nString name = thing.GetValue();</code></pre>\n"
 - uid: CRMScript.NetServer.NSProductFamily.SetId(Integer)
   commentId: M:CRMScript.NetServer.NSProductFamily.SetId(Integer)
   id: 'SetId(Integer)'
