--- a/docs/api-reference/CRMScript.NetServer.NSProductType.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSProductType.yml
@@ -6,10 +6,10 @@ items:
   langs:
   - crmscript
   children:
+  - CRMScript.NetServer.NSProductType.#ctor
   - CRMScript.NetServer.NSProductType.GetId()
   - CRMScript.NetServer.NSProductType.GetTooltip()
   - CRMScript.NetServer.NSProductType.GetValue()
-  - CRMScript.NetServer.NSProductType.#ctor
   - CRMScript.NetServer.NSProductType.SetId(Integer)
   - CRMScript.NetServer.NSProductType.SetTooltip(String)
   - CRMScript.NetServer.NSProductType.SetValue(String)
@@ -19,66 +19,6 @@ items:
   type: Class
   summary: 
   example: 
-- uid: CRMScript.NetServer.NSProductType.GetId()
-  commentId: M:CRMScript.NetServer.NSProductType.GetId()
-  id: 'GetId()'
-  so.intellisense: NSProductType.GetId
-  langs:
-  - crmscript
-  name: 'GetId()'
-  nameWithType: NSProductType.GetId()
-  fullName: CRMScript.NetServer.NSProductType.GetId()
-  type: Method
-  summary: "\nGets the primary key (ID) for the NSProductType<p></p>\n<strong>Returns:</strong>Integer NSProductType id.<p></p>\n<pre><code>NSProductType thing;\nInteger id = thing.GetId();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: Integer GetId()
-    parameters: []
-    return:
-      type: CRMScript.Global.Integer
-      description:
-  example: 
-  - "\n<pre><code>NSProductType thing;\nInteger id = thing.GetId();</code></pre>\n"
-- uid: CRMScript.NetServer.NSProductType.GetTooltip()
-  commentId: M:CRMScript.NetServer.NSProductType.GetTooltip()
-  id: 'GetTooltip()'
-  so.intellisense: NSProductType.GetTooltip
-  langs:
-  - crmscript
-  name: 'GetTooltip()'
-  nameWithType: NSProductType.GetTooltip()
-  fullName: CRMScript.NetServer.NSProductType.GetTooltip()
-  type: Method
-  summary: "\nGets the tooltip description for the NSProductType list item.<p></p>\n<strong>Returns:</strong>String NSProductType tooltip description.<p></p>\n<pre><code>NSProductType thing;\nString descr = thing.GetTooltip();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: String GetTooltip()
-    parameters: []
-    return:
-      type: CRMScript.Global.String
-      description:
-  example: 
-  - "\n<pre><code>NSProductType thing;\nString descr = thing.GetTooltip();</code></pre>\n"
-- uid: CRMScript.NetServer.NSProductType.GetValue()
-  commentId: M:CRMScript.NetServer.NSProductType.GetValue()
-  id: 'GetValue()'
-  so.intellisense: NSProductType.GetValue
-  langs:
-  - crmscript
-  name: 'GetValue()'
-  nameWithType: NSProductType.GetValue()
-  fullName: CRMScript.NetServer.NSProductType.GetValue()
-  type: Method
-  summary: "\nGets the name of the NSProductType.<p></p>\n<strong>Returns:</strong>String NSProductType name.<p></p>\n<pre><code>NSProductType thing;\nString name = thing.GetValue();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: String GetValue()
-    parameters: []
-    return:
-      type: CRMScript.Global.String
-      description:
-  example: 
-  - "\n<pre><code>NSProductType thing;\nString name = thing.GetValue();</code></pre>\n"
 - uid: CRMScript.NetServer.NSProductType.#ctor
   commentId: M:CRMScript.NetServer.NSProductType.#ctor
   id: '#ctor'
@@ -94,6 +34,66 @@ items:
   syntax: 
     content: NSProductType
   example: 
+- uid: CRMScript.NetServer.NSProductType.GetId()
+  commentId: M:CRMScript.NetServer.NSProductType.GetId()
+  id: 'GetId()'
+  so.intellisense: NSProductType.GetId
+  langs:
+  - crmscript
+  name: 'GetId()'
+  nameWithType: NSProductType.GetId()
+  fullName: CRMScript.NetServer.NSProductType.GetId()
+  type: Method
+  summary: "\nGets the primary key (ID) for the NSProductType.\n"
+  remarks: 
+  syntax: 
+    content: Integer GetId()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+      description: NSProductType ID
+  example: 
+  - "\n<pre><code>NSProductType thing;\nInteger id = thing.GetId();</code></pre>\n"
+- uid: CRMScript.NetServer.NSProductType.GetTooltip()
+  commentId: M:CRMScript.NetServer.NSProductType.GetTooltip()
+  id: 'GetTooltip()'
+  so.intellisense: NSProductType.GetTooltip
+  langs:
+  - crmscript
+  name: 'GetTooltip()'
+  nameWithType: NSProductType.GetTooltip()
+  fullName: CRMScript.NetServer.NSProductType.GetTooltip()
+  type: Method
+  summary: "\nGets the tooltip description for the NSProductType list item.\n"
+  remarks: 
+  syntax: 
+    content: String GetTooltip()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: NSProductType tooltip description
+  example: 
+  - "\n<pre><code>NSProductType thing;\nString descr = thing.GetTooltip();</code></pre>\n"
+- uid: CRMScript.NetServer.NSProductType.GetValue()
+  commentId: M:CRMScript.NetServer.NSProductType.GetValue()
+  id: 'GetValue()'
+  so.intellisense: NSProductType.GetValue
+  langs:
+  - crmscript
+  name: 'GetValue()'
+  nameWithType: NSProductType.GetValue()
+  fullName: CRMScript.NetServer.NSProductType.GetValue()
+  type: Method
+  summary: "\nGets the name of the NSProductType.\n"
+  remarks: 
+  syntax: 
+    content: String GetValue()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: NSProductType name
+  example: 
+  - "\n<pre><code>NSProductType thing;\nString name = thing.GetValue();</code></pre>\n"
 - uid: CRMScript.NetServer.NSProductType.SetId(Integer)
   commentId: M:CRMScript.NetServer.NSProductType.SetId(Integer)
   id: 'SetId(Integer)'
