--- a/docs/api-reference/CRMScript.NetServer.NSProjectStatus.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSProjectStatus.yml
@@ -6,10 +6,10 @@ items:
   langs:
   - crmscript
   children:
+  - CRMScript.NetServer.NSProjectStatus.#ctor
   - CRMScript.NetServer.NSProjectStatus.GetId()
   - CRMScript.NetServer.NSProjectStatus.GetTooltip()
   - CRMScript.NetServer.NSProjectStatus.GetValue()
-  - CRMScript.NetServer.NSProjectStatus.#ctor
   - CRMScript.NetServer.NSProjectStatus.SetId(Integer)
   - CRMScript.NetServer.NSProjectStatus.SetTooltip(String)
   - CRMScript.NetServer.NSProjectStatus.SetValue(String)
@@ -19,66 +19,6 @@ items:
   type: Class
   summary: 
   example: 
-- uid: CRMScript.NetServer.NSProjectStatus.GetId()
-  commentId: M:CRMScript.NetServer.NSProjectStatus.GetId()
-  id: 'GetId()'
-  so.intellisense: NSProjectStatus.GetId
-  langs:
-  - crmscript
-  name: 'GetId()'
-  nameWithType: NSProjectStatus.GetId()
-  fullName: CRMScript.NetServer.NSProjectStatus.GetId()
-  type: Method
-  summary: "\nGets the primary key (ID) for the NSProjectStatus<p></p>\n<strong>Returns:</strong>Integer NSProjectStatus id.<p></p>\n<pre><code>NSProjectStatus thing;\nInteger id = thing.GetId();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: Integer GetId()
-    parameters: []
-    return:
-      type: CRMScript.Global.Integer
-      description:
-  example: 
-  - "\n<pre><code>NSProjectStatus thing;\nInteger id = thing.GetId();</code></pre>\n"
-- uid: CRMScript.NetServer.NSProjectStatus.GetTooltip()
-  commentId: M:CRMScript.NetServer.NSProjectStatus.GetTooltip()
-  id: 'GetTooltip()'
-  so.intellisense: NSProjectStatus.GetTooltip
-  langs:
-  - crmscript
-  name: 'GetTooltip()'
-  nameWithType: NSProjectStatus.GetTooltip()
-  fullName: CRMScript.NetServer.NSProjectStatus.GetTooltip()
-  type: Method
-  summary: "\nGets the tooltip description for the NSProjectStatus list item.<p></p>\n<strong>Returns:</strong>String NSProjectStatus tooltip description.<p></p>\n<pre><code>NSProjectStatus thing;\nString descr = thing.GetTooltip();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: String GetTooltip()
-    parameters: []
-    return:
-      type: CRMScript.Global.String
-      description:
-  example: 
-  - "\n<pre><code>NSProjectStatus thing;\nString descr = thing.GetTooltip();</code></pre>\n"
-- uid: CRMScript.NetServer.NSProjectStatus.GetValue()
-  commentId: M:CRMScript.NetServer.NSProjectStatus.GetValue()
-  id: 'GetValue()'
-  so.intellisense: NSProjectStatus.GetValue
-  langs:
-  - crmscript
-  name: 'GetValue()'
-  nameWithType: NSProjectStatus.GetValue()
-  fullName: CRMScript.NetServer.NSProjectStatus.GetValue()
-  type: Method
-  summary: "\nGets the name of the NSProjectStatus.<p></p>\n<strong>Returns:</strong>String NSProjectStatus name.<p></p>\n<pre><code>NSProjectStatus thing;\nString name = thing.GetValue();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: String GetValue()
-    parameters: []
-    return:
-      type: CRMScript.Global.String
-      description:
-  example: 
-  - "\n<pre><code>NSProjectStatus thing;\nString name = thing.GetValue();</code></pre>\n"
 - uid: CRMScript.NetServer.NSProjectStatus.#ctor
   commentId: M:CRMScript.NetServer.NSProjectStatus.#ctor
   id: '#ctor'
@@ -94,6 +34,66 @@ items:
   syntax: 
     content: NSProjectStatus
   example: 
+- uid: CRMScript.NetServer.NSProjectStatus.GetId()
+  commentId: M:CRMScript.NetServer.NSProjectStatus.GetId()
+  id: 'GetId()'
+  so.intellisense: NSProjectStatus.GetId
+  langs:
+  - crmscript
+  name: 'GetId()'
+  nameWithType: NSProjectStatus.GetId()
+  fullName: CRMScript.NetServer.NSProjectStatus.GetId()
+  type: Method
+  summary: "\nGets the primary key (ID) for the NSProjectStatus.\n"
+  remarks: 
+  syntax: 
+    content: Integer GetId()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+      description: NSProjectStatus ID
+  example: 
+  - "\n<pre><code>NSProjectStatus thing;\nInteger id = thing.GetId();</code></pre>\n"
+- uid: CRMScript.NetServer.NSProjectStatus.GetTooltip()
+  commentId: M:CRMScript.NetServer.NSProjectStatus.GetTooltip()
+  id: 'GetTooltip()'
+  so.intellisense: NSProjectStatus.GetTooltip
+  langs:
+  - crmscript
+  name: 'GetTooltip()'
+  nameWithType: NSProjectStatus.GetTooltip()
+  fullName: CRMScript.NetServer.NSProjectStatus.GetTooltip()
+  type: Method
+  summary: "\nGets the tooltip description for the NSProjectStatus list item.\n"
+  remarks: 
+  syntax: 
+    content: String GetTooltip()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: NSProjectStatus tooltip description
+  example: 
+  - "\n<pre><code>NSProjectStatus thing;\nString descr = thing.GetTooltip();</code></pre>\n"
+- uid: CRMScript.NetServer.NSProjectStatus.GetValue()
+  commentId: M:CRMScript.NetServer.NSProjectStatus.GetValue()
+  id: 'GetValue()'
+  so.intellisense: NSProjectStatus.GetValue
+  langs:
+  - crmscript
+  name: 'GetValue()'
+  nameWithType: NSProjectStatus.GetValue()
+  fullName: CRMScript.NetServer.NSProjectStatus.GetValue()
+  type: Method
+  summary: "\nGets the name of the NSProjectStatus.\n"
+  remarks: 
+  syntax: 
+    content: String GetValue()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: NSProjectStatus name
+  example: 
+  - "\n<pre><code>NSProjectStatus thing;\nString name = thing.GetValue();</code></pre>\n"
 - uid: CRMScript.NetServer.NSProjectStatus.SetId(Integer)
   commentId: M:CRMScript.NetServer.NSProjectStatus.SetId(Integer)
   id: 'SetId(Integer)'
