--- a/docs/api-reference/CRMScript.NetServer.NSProjectTypeStatusLink.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSProjectTypeStatusLink.yml
@@ -6,6 +6,7 @@ items:
   langs:
   - crmscript
   children:
+  - CRMScript.NetServer.NSProjectTypeStatusLink.#ctor
   - CRMScript.NetServer.NSProjectTypeStatusLink.GetProjectTypeStatusLinkId()
   - CRMScript.NetServer.NSProjectTypeStatusLink.GetProjStatusId()
   - CRMScript.NetServer.NSProjectTypeStatusLink.GetProjStatusName()
@@ -13,7 +14,6 @@ items:
   - CRMScript.NetServer.NSProjectTypeStatusLink.GetProjTypeId()
   - CRMScript.NetServer.NSProjectTypeStatusLink.GetProjTypeName()
   - CRMScript.NetServer.NSProjectTypeStatusLink.GetProjTypeTooltip()
-  - CRMScript.NetServer.NSProjectTypeStatusLink.#ctor
   - CRMScript.NetServer.NSProjectTypeStatusLink.SetProjectTypeStatusLinkId(Integer)
   - CRMScript.NetServer.NSProjectTypeStatusLink.SetProjStatusId(Integer)
   - CRMScript.NetServer.NSProjectTypeStatusLink.SetProjStatusName(String)
@@ -26,132 +26,6 @@ items:
   fullName: CRMScript.NetServer.NSProjectTypeStatusLink
   type: Class
   summary: 
-  example: 
-- uid: CRMScript.NetServer.NSProjectTypeStatusLink.GetProjectTypeStatusLinkId()
-  commentId: M:CRMScript.NetServer.NSProjectTypeStatusLink.GetProjectTypeStatusLinkId()
-  id: 'GetProjectTypeStatusLinkId()'
-  so.intellisense: NSProjectTypeStatusLink.GetProjectTypeStatusLinkId
-  langs:
-  - crmscript
-  name: 'GetProjectTypeStatusLinkId()'
-  nameWithType: NSProjectTypeStatusLink.GetProjectTypeStatusLinkId()
-  fullName: CRMScript.NetServer.NSProjectTypeStatusLink.GetProjectTypeStatusLinkId()
-  type: Method
-  summary: 
-  remarks: 
-  syntax: 
-    content: GetProjectTypeStatusLinkId()
-    parameters: []
-    return:
-      type: CRMScript.Global.Void
-  example: 
-- uid: CRMScript.NetServer.NSProjectTypeStatusLink.GetProjStatusId()
-  commentId: M:CRMScript.NetServer.NSProjectTypeStatusLink.GetProjStatusId()
-  id: 'GetProjStatusId()'
-  so.intellisense: NSProjectTypeStatusLink.GetProjStatusId
-  langs:
-  - crmscript
-  name: 'GetProjStatusId()'
-  nameWithType: NSProjectTypeStatusLink.GetProjStatusId()
-  fullName: CRMScript.NetServer.NSProjectTypeStatusLink.GetProjStatusId()
-  type: Method
-  summary: 
-  remarks: 
-  syntax: 
-    content: GetProjStatusId()
-    parameters: []
-    return:
-      type: CRMScript.Global.Void
-  example: 
-- uid: CRMScript.NetServer.NSProjectTypeStatusLink.GetProjStatusName()
-  commentId: M:CRMScript.NetServer.NSProjectTypeStatusLink.GetProjStatusName()
-  id: 'GetProjStatusName()'
-  so.intellisense: NSProjectTypeStatusLink.GetProjStatusName
-  langs:
-  - crmscript
-  name: 'GetProjStatusName()'
-  nameWithType: NSProjectTypeStatusLink.GetProjStatusName()
-  fullName: CRMScript.NetServer.NSProjectTypeStatusLink.GetProjStatusName()
-  type: Method
-  summary: 
-  remarks: 
-  syntax: 
-    content: GetProjStatusName()
-    parameters: []
-    return:
-      type: CRMScript.Global.Void
-  example: 
-- uid: CRMScript.NetServer.NSProjectTypeStatusLink.GetProjStatusTooltip()
-  commentId: M:CRMScript.NetServer.NSProjectTypeStatusLink.GetProjStatusTooltip()
-  id: 'GetProjStatusTooltip()'
-  so.intellisense: NSProjectTypeStatusLink.GetProjStatusTooltip
-  langs:
-  - crmscript
-  name: 'GetProjStatusTooltip()'
-  nameWithType: NSProjectTypeStatusLink.GetProjStatusTooltip()
-  fullName: CRMScript.NetServer.NSProjectTypeStatusLink.GetProjStatusTooltip()
-  type: Method
-  summary: 
-  remarks: 
-  syntax: 
-    content: GetProjStatusTooltip()
-    parameters: []
-    return:
-      type: CRMScript.Global.Void
-  example: 
-- uid: CRMScript.NetServer.NSProjectTypeStatusLink.GetProjTypeId()
-  commentId: M:CRMScript.NetServer.NSProjectTypeStatusLink.GetProjTypeId()
-  id: 'GetProjTypeId()'
-  so.intellisense: NSProjectTypeStatusLink.GetProjTypeId
-  langs:
-  - crmscript
-  name: 'GetProjTypeId()'
-  nameWithType: NSProjectTypeStatusLink.GetProjTypeId()
-  fullName: CRMScript.NetServer.NSProjectTypeStatusLink.GetProjTypeId()
-  type: Method
-  summary: 
-  remarks: 
-  syntax: 
-    content: GetProjTypeId()
-    parameters: []
-    return:
-      type: CRMScript.Global.Void
-  example: 
-- uid: CRMScript.NetServer.NSProjectTypeStatusLink.GetProjTypeName()
-  commentId: M:CRMScript.NetServer.NSProjectTypeStatusLink.GetProjTypeName()
-  id: 'GetProjTypeName()'
-  so.intellisense: NSProjectTypeStatusLink.GetProjTypeName
-  langs:
-  - crmscript
-  name: 'GetProjTypeName()'
-  nameWithType: NSProjectTypeStatusLink.GetProjTypeName()
-  fullName: CRMScript.NetServer.NSProjectTypeStatusLink.GetProjTypeName()
-  type: Method
-  summary: 
-  remarks: 
-  syntax: 
-    content: GetProjTypeName()
-    parameters: []
-    return:
-      type: CRMScript.Global.Void
-  example: 
-- uid: CRMScript.NetServer.NSProjectTypeStatusLink.GetProjTypeTooltip()
-  commentId: M:CRMScript.NetServer.NSProjectTypeStatusLink.GetProjTypeTooltip()
-  id: 'GetProjTypeTooltip()'
-  so.intellisense: NSProjectTypeStatusLink.GetProjTypeTooltip
-  langs:
-  - crmscript
-  name: 'GetProjTypeTooltip()'
-  nameWithType: NSProjectTypeStatusLink.GetProjTypeTooltip()
-  fullName: CRMScript.NetServer.NSProjectTypeStatusLink.GetProjTypeTooltip()
-  type: Method
-  summary: 
-  remarks: 
-  syntax: 
-    content: GetProjTypeTooltip()
-    parameters: []
-    return:
-      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSProjectTypeStatusLink.#ctor
   commentId: M:CRMScript.NetServer.NSProjectTypeStatusLink.#ctor
@@ -168,6 +42,132 @@ items:
   syntax: 
     content: NSProjectTypeStatusLink
   example: 
+- uid: CRMScript.NetServer.NSProjectTypeStatusLink.GetProjectTypeStatusLinkId()
+  commentId: M:CRMScript.NetServer.NSProjectTypeStatusLink.GetProjectTypeStatusLinkId()
+  id: 'GetProjectTypeStatusLinkId()'
+  so.intellisense: NSProjectTypeStatusLink.GetProjectTypeStatusLinkId
+  langs:
+  - crmscript
+  name: 'GetProjectTypeStatusLinkId()'
+  nameWithType: NSProjectTypeStatusLink.GetProjectTypeStatusLinkId()
+  fullName: CRMScript.NetServer.NSProjectTypeStatusLink.GetProjectTypeStatusLinkId()
+  type: Method
+  summary: 
+  remarks: 
+  syntax: 
+    content: Integer GetProjectTypeStatusLinkId()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+  example: 
+- uid: CRMScript.NetServer.NSProjectTypeStatusLink.GetProjStatusId()
+  commentId: M:CRMScript.NetServer.NSProjectTypeStatusLink.GetProjStatusId()
+  id: 'GetProjStatusId()'
+  so.intellisense: NSProjectTypeStatusLink.GetProjStatusId
+  langs:
+  - crmscript
+  name: 'GetProjStatusId()'
+  nameWithType: NSProjectTypeStatusLink.GetProjStatusId()
+  fullName: CRMScript.NetServer.NSProjectTypeStatusLink.GetProjStatusId()
+  type: Method
+  summary: 
+  remarks: 
+  syntax: 
+    content: Integer GetProjStatusId()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+  example: 
+- uid: CRMScript.NetServer.NSProjectTypeStatusLink.GetProjStatusName()
+  commentId: M:CRMScript.NetServer.NSProjectTypeStatusLink.GetProjStatusName()
+  id: 'GetProjStatusName()'
+  so.intellisense: NSProjectTypeStatusLink.GetProjStatusName
+  langs:
+  - crmscript
+  name: 'GetProjStatusName()'
+  nameWithType: NSProjectTypeStatusLink.GetProjStatusName()
+  fullName: CRMScript.NetServer.NSProjectTypeStatusLink.GetProjStatusName()
+  type: Method
+  summary: 
+  remarks: 
+  syntax: 
+    content: String GetProjStatusName()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+  example: 
+- uid: CRMScript.NetServer.NSProjectTypeStatusLink.GetProjStatusTooltip()
+  commentId: M:CRMScript.NetServer.NSProjectTypeStatusLink.GetProjStatusTooltip()
+  id: 'GetProjStatusTooltip()'
+  so.intellisense: NSProjectTypeStatusLink.GetProjStatusTooltip
+  langs:
+  - crmscript
+  name: 'GetProjStatusTooltip()'
+  nameWithType: NSProjectTypeStatusLink.GetProjStatusTooltip()
+  fullName: CRMScript.NetServer.NSProjectTypeStatusLink.GetProjStatusTooltip()
+  type: Method
+  summary: 
+  remarks: 
+  syntax: 
+    content: String GetProjStatusTooltip()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+  example: 
+- uid: CRMScript.NetServer.NSProjectTypeStatusLink.GetProjTypeId()
+  commentId: M:CRMScript.NetServer.NSProjectTypeStatusLink.GetProjTypeId()
+  id: 'GetProjTypeId()'
+  so.intellisense: NSProjectTypeStatusLink.GetProjTypeId
+  langs:
+  - crmscript
+  name: 'GetProjTypeId()'
+  nameWithType: NSProjectTypeStatusLink.GetProjTypeId()
+  fullName: CRMScript.NetServer.NSProjectTypeStatusLink.GetProjTypeId()
+  type: Method
+  summary: 
+  remarks: 
+  syntax: 
+    content: Integer GetProjTypeId()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+  example: 
+- uid: CRMScript.NetServer.NSProjectTypeStatusLink.GetProjTypeName()
+  commentId: M:CRMScript.NetServer.NSProjectTypeStatusLink.GetProjTypeName()
+  id: 'GetProjTypeName()'
+  so.intellisense: NSProjectTypeStatusLink.GetProjTypeName
+  langs:
+  - crmscript
+  name: 'GetProjTypeName()'
+  nameWithType: NSProjectTypeStatusLink.GetProjTypeName()
+  fullName: CRMScript.NetServer.NSProjectTypeStatusLink.GetProjTypeName()
+  type: Method
+  summary: 
+  remarks: 
+  syntax: 
+    content: String GetProjTypeName()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+  example: 
+- uid: CRMScript.NetServer.NSProjectTypeStatusLink.GetProjTypeTooltip()
+  commentId: M:CRMScript.NetServer.NSProjectTypeStatusLink.GetProjTypeTooltip()
+  id: 'GetProjTypeTooltip()'
+  so.intellisense: NSProjectTypeStatusLink.GetProjTypeTooltip
+  langs:
+  - crmscript
+  name: 'GetProjTypeTooltip()'
+  nameWithType: NSProjectTypeStatusLink.GetProjTypeTooltip()
+  fullName: CRMScript.NetServer.NSProjectTypeStatusLink.GetProjTypeTooltip()
+  type: Method
+  summary: 
+  remarks: 
+  syntax: 
+    content: String GetProjTypeTooltip()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+  example: 
 - uid: CRMScript.NetServer.NSProjectTypeStatusLink.SetProjectTypeStatusLinkId(Integer)
   commentId: M:CRMScript.NetServer.NSProjectTypeStatusLink.SetProjectTypeStatusLinkId(Integer)
   id: 'SetProjectTypeStatusLinkId(Integer)'
@@ -181,9 +181,9 @@ items:
   summary: 
   remarks: 
   syntax: 
-    content: Void SetProjectTypeStatusLinkId(Integer p_0)
+    content: Void SetProjectTypeStatusLinkId(Integer linkId)
     parameters:
-    - id: p_0
+    - id: linkId
       type: CRMScript.Global.Integer
       description: 
     return:
@@ -202,9 +202,9 @@ items:
   summary: 
   remarks: 
   syntax: 
-    content: Void SetProjStatusId(Integer p_0)
+    content: Void SetProjStatusId(Integer statusId)
     parameters:
-    - id: p_0
+    - id: statusId
       type: CRMScript.Global.Integer
       description: 
     return:
@@ -223,9 +223,9 @@ items:
   summary: 
   remarks: 
   syntax: 
-    content: Void SetProjStatusName(String p_0)
+    content: Void SetProjStatusName(String statusName)
     parameters:
-    - id: p_0
+    - id: statusName
       type: CRMScript.Global.String
       description: 
     return:
@@ -244,9 +244,9 @@ items:
   summary: 
   remarks: 
   syntax: 
-    content: Void SetProjStatusTooltip(String p_0)
+    content: Void SetProjStatusTooltip(String tooltip)
     parameters:
-    - id: p_0
+    - id: tooltip
       type: CRMScript.Global.String
       description: 
     return:
@@ -265,9 +265,9 @@ items:
   summary: 
   remarks: 
   syntax: 
-    content: Void SetProjTypeId(Integer p_0)
+    content: Void SetProjTypeId(Integer typeId)
     parameters:
-    - id: p_0
+    - id: typeId
       type: CRMScript.Global.Integer
       description: 
     return:
@@ -286,9 +286,9 @@ items:
   summary: 
   remarks: 
   syntax: 
-    content: Void SetProjTypeName(String p_0)
+    content: Void SetProjTypeName(String typeName)
     parameters:
-    - id: p_0
+    - id: typeName
       type: CRMScript.Global.String
       description: 
     return:
@@ -307,9 +307,9 @@ items:
   summary: 
   remarks: 
   syntax: 
-    content: Void SetProjTypeTooltip(String p_0)
+    content: Void SetProjTypeTooltip(String tooltip)
     parameters:
-    - id: p_0
+    - id: tooltip
       type: CRMScript.Global.String
       description: 
     return:
