--- a/docs/api-reference/CRMScript.NetServer.NSQuoteLine.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSQuoteLine.yml
@@ -341,7 +341,7 @@ items:
   nameWithType: NSQuoteLine.GetExtraField1()
   fullName: CRMScript.NetServer.NSQuoteLine.GetExtraField1()
   type: Method
-  summary: "\nThis a simple field for adding information that the Connector can provide, and that the qoute document need to display.\n"
+  summary: "\nA simple field for adding information that the Connector can provide, and that the quote document need to display.\n"
   remarks: 
   syntax: 
     content: String GetExtraField1()
@@ -361,7 +361,7 @@ items:
   nameWithType: NSQuoteLine.GetExtraField2()
   fullName: CRMScript.NetServer.NSQuoteLine.GetExtraField2()
   type: Method
-  summary: "\nThis a simple field for adding information that the Connector can provide, and that the qoute document need to display.\n"
+  summary: "\nA simple field for adding information that the Connector can provide, and that the quote document need to display.\n"
   remarks: 
   syntax: 
     content: String GetExtraField2()
@@ -381,7 +381,7 @@ items:
   nameWithType: NSQuoteLine.GetExtraField3()
   fullName: CRMScript.NetServer.NSQuoteLine.GetExtraField3()
   type: Method
-  summary: "\nThis a simple field for adding information that the Connector can provide, and that the qoute document need to display.\n"
+  summary: "\nA simple field for adding information that the Connector can provide, and that the quote document need to display.\n"
   remarks: 
   syntax: 
     content: String GetExtraField3()
@@ -401,7 +401,7 @@ items:
   nameWithType: NSQuoteLine.GetExtraField4()
   fullName: CRMScript.NetServer.NSQuoteLine.GetExtraField4()
   type: Method
-  summary: "\nThis a simple field for adding information that the Connector can provide, and that the qoute document need to display.\n"
+  summary: "\nA simple field for adding information that the Connector can provide, and that the quote document need to display.\n"
   remarks: 
   syntax: 
     content: String GetExtraField4()
@@ -421,7 +421,7 @@ items:
   nameWithType: NSQuoteLine.GetExtraField5()
   fullName: CRMScript.NetServer.NSQuoteLine.GetExtraField5()
   type: Method
-  summary: "\nThis a simple field for adding information that the Connector can provide, and that the qoute document need to display.\n"
+  summary: "\nA simple field for adding information that the Connector can provide, and that the quote document need to display.\n"
   remarks: 
   syntax: 
     content: String GetExtraField5()
@@ -1322,7 +1322,7 @@ items:
   nameWithType: NSQuoteLine.SetExtraField1(String)
   fullName: CRMScript.NetServer.NSQuoteLine.SetExtraField1(String)
   type: Method
-  summary: "\nThis a simple field for adding information that the Connector can provide, and that the qoute document need to display.\n"
+  summary: "\nA simple field for adding information that the Connector can provide, and that the quote document need to display.\n"
   remarks: 
   syntax: 
     content: Void SetExtraField1(String extraField1)
@@ -1344,7 +1344,7 @@ items:
   nameWithType: NSQuoteLine.SetExtraField2(String)
   fullName: CRMScript.NetServer.NSQuoteLine.SetExtraField2(String)
   type: Method
-  summary: "\nThis a simple field for adding information that the Connector can provide, and that the qoute document need to display.\n"
+  summary: "\nA simple field for adding information that the Connector can provide, and that the quote document need to display.\n"
   remarks: 
   syntax: 
     content: Void SetExtraField2(String extraField2)
@@ -1366,7 +1366,7 @@ items:
   nameWithType: NSQuoteLine.SetExtraField3(String)
   fullName: CRMScript.NetServer.NSQuoteLine.SetExtraField3(String)
   type: Method
-  summary: "\nThis a simple field for adding information that the Connector can provide, and that the qoute document need to display.\n"
+  summary: "\nA simple field for adding information that the Connector can provide, and that the quote document need to display.\n"
   remarks: 
   syntax: 
     content: Void SetExtraField3(String extraField3)
@@ -1388,7 +1388,7 @@ items:
   nameWithType: NSQuoteLine.SetExtraField4(String)
   fullName: CRMScript.NetServer.NSQuoteLine.SetExtraField4(String)
   type: Method
-  summary: "\nThis a simple field for adding information that the Connector can provide, and that the qoute document need to display.\n"
+  summary: "\nA simple field for adding information that the Connector can provide, and that the quote document need to display.\n"
   remarks: 
   syntax: 
     content: Void SetExtraField4(String extraField4)
@@ -1410,7 +1410,7 @@ items:
   nameWithType: NSQuoteLine.SetExtraField5(String)
   fullName: CRMScript.NetServer.NSQuoteLine.SetExtraField5(String)
   type: Method
-  summary: "\nThis a simple field for adding information that the Connector can provide, and that the qoute document need to display.\n"
+  summary: "\nA simple field for adding information that the Connector can provide, and that the quote document need to display.\n"
   remarks: 
   syntax: 
     content: Void SetExtraField5(String extraField5)
