--- a/docs/api-reference/CRMScript.NetServer.NSSale.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSSale.yml
@@ -73,7 +73,7 @@ items:
   nameWithType: NSSale.GetActiveErpLinks()
   fullName: CRMScript.NetServer.NSSale.GetActiveErpLinks()
   type: Method
-  summary: "\nThe number of active erp links\n"
+  summary: "\nThe number of active ERP links\n"
   remarks: 
   syntax: 
     content: Integer GetActiveErpLinks()
@@ -588,7 +588,7 @@ items:
   nameWithType: NSSale.SetActiveErpLinks(Integer)
   fullName: CRMScript.NetServer.NSSale.SetActiveErpLinks(Integer)
   type: Method
-  summary: "\nThe number of active erp links\n"
+  summary: "\nThe number of active ERP links\n"
   remarks: 
   syntax: 
     content: Void SetActiveErpLinks(Integer activeErpLinks)
