--- a/docs/api-reference/CRMScript.NetServer.NSSaleAgent.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSSaleAgent.yml
@@ -224,7 +224,7 @@ items:
   nameWithType: NSSaleAgent.GetMyOpportunities(Integer)
   fullName: CRMScript.NetServer.NSSaleAgent.GetMyOpportunities(Integer)
   type: Method
-  summary: "\nReturning the opportunities (open sales) belonging to the user currently logged on\n"
+  summary: "\nReturns opportunities (open sales) belonging to the user currently logged on\n"
   remarks: 
   syntax: 
     content: NSSale[] GetMyOpportunities(Integer count)
