--- a/docs/api-reference/CRMScript.NetServer.NSSaleEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSSaleEntity.yml
@@ -111,7 +111,7 @@ items:
   nameWithType: NSSaleEntity.GetActiveErpLinks()
   fullName: CRMScript.NetServer.NSSaleEntity.GetActiveErpLinks()
   type: Method
-  summary: "\nThe number of active erp links\n"
+  summary: "\nThe number of active ERP links\n"
   remarks: 
   syntax: 
     content: Integer GetActiveErpLinks()
@@ -983,7 +983,7 @@ items:
   nameWithType: NSSaleEntity.SetActiveErpLinks(Integer)
   fullName: CRMScript.NetServer.NSSaleEntity.SetActiveErpLinks(Integer)
   type: Method
-  summary: "\nThe number of active erp links\n"
+  summary: "\nThe number of active ERP links\n"
   remarks: 
   syntax: 
     content: Void SetActiveErpLinks(Integer activeErpLinks)
