--- a/docs/api-reference/CRMScript.NetServer.NSUser.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSUser.yml
@@ -524,7 +524,7 @@ items:
   nameWithType: NSUser.GetUserName()
   fullName: CRMScript.NetServer.NSUser.GetUserName()
   type: Method
-  summary: "\nUser name, a.k.a. Login name. This might be an e-mail address.\n"
+  summary: "\nUser name, a.k.a. Login name. This might be an email address.\n"
   remarks: 
   syntax: 
     content: String GetUserName()
@@ -1065,7 +1065,7 @@ items:
   nameWithType: NSUser.SetUserName(String)
   fullName: CRMScript.NetServer.NSUser.SetUserName(String)
   type: Method
-  summary: "\nUser name, a.k.a. Login name. This might be an e-mail address.\n"
+  summary: "\nUser name, a.k.a. Login name. This might be an email address.\n"
   remarks: 
   syntax: 
     content: Void SetUserName(String userName)
