--- a/docs/api-reference/CRMScript.NetServer.NSWebAppUsage.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSWebAppUsage.yml
@@ -52,7 +52,7 @@ items:
   nameWithType: NSWebAppUsage.GetAggregateBin()
   fullName: CRMScript.NetServer.NSWebAppUsage.GetAggregateBin()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetAggregateBin()
@@ -72,7 +72,7 @@ items:
   nameWithType: NSWebAppUsage.GetAggregateCount()
   fullName: CRMScript.NetServer.NSWebAppUsage.GetAggregateCount()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetAggregateCount()
@@ -92,7 +92,7 @@ items:
   nameWithType: NSWebAppUsage.GetAssocId()
   fullName: CRMScript.NetServer.NSWebAppUsage.GetAssocId()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetAssocId()
@@ -112,7 +112,7 @@ items:
   nameWithType: NSWebAppUsage.GetTimestamp()
   fullName: CRMScript.NetServer.NSWebAppUsage.GetTimestamp()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: DateTime GetTimestamp()
@@ -132,7 +132,7 @@ items:
   nameWithType: NSWebAppUsage.GetVersion()
   fullName: CRMScript.NetServer.NSWebAppUsage.GetVersion()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetVersion()
@@ -152,7 +152,7 @@ items:
   nameWithType: NSWebAppUsage.GetViewState()
   fullName: CRMScript.NetServer.NSWebAppUsage.GetViewState()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: String GetViewState()
@@ -172,7 +172,7 @@ items:
   nameWithType: NSWebAppUsage.GetWebAppUsageId()
   fullName: CRMScript.NetServer.NSWebAppUsage.GetWebAppUsageId()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetWebAppUsageId()
@@ -192,7 +192,7 @@ items:
   nameWithType: NSWebAppUsage.SetAggregateBin(Integer)
   fullName: CRMScript.NetServer.NSWebAppUsage.SetAggregateBin(Integer)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetAggregateBin(Integer aggregateBin)
@@ -214,7 +214,7 @@ items:
   nameWithType: NSWebAppUsage.SetAggregateCount(Integer)
   fullName: CRMScript.NetServer.NSWebAppUsage.SetAggregateCount(Integer)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetAggregateCount(Integer aggregateCount)
@@ -236,7 +236,7 @@ items:
   nameWithType: NSWebAppUsage.SetAssocId(Integer)
   fullName: CRMScript.NetServer.NSWebAppUsage.SetAssocId(Integer)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetAssocId(Integer assocId)
@@ -258,7 +258,7 @@ items:
   nameWithType: NSWebAppUsage.SetTimestamp(DateTime)
   fullName: CRMScript.NetServer.NSWebAppUsage.SetTimestamp(DateTime)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetTimestamp(DateTime timestamp)
@@ -280,7 +280,7 @@ items:
   nameWithType: NSWebAppUsage.SetVersion(Integer)
   fullName: CRMScript.NetServer.NSWebAppUsage.SetVersion(Integer)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetVersion(Integer version)
@@ -302,7 +302,7 @@ items:
   nameWithType: NSWebAppUsage.SetViewState(String)
   fullName: CRMScript.NetServer.NSWebAppUsage.SetViewState(String)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetViewState(String viewState)
@@ -324,7 +324,7 @@ items:
   nameWithType: NSWebAppUsage.SetWebAppUsageId(Integer)
   fullName: CRMScript.NetServer.NSWebAppUsage.SetWebAppUsageId(Integer)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetWebAppUsageId(Integer webAppUsageId)
