--- a/docs/api-reference/CRMScript.NetServer.NSWebhookAgent.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSWebhookAgent.yml
@@ -32,7 +32,7 @@ items:
   nameWithType: NSWebhookAgent.#ctor
   fullName: CRMScript.NetServer.NSWebhookAgent.#ctor
   type: Constructor
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: NSWebhookAgent
@@ -91,7 +91,7 @@ items:
   fullName: CRMScript.NetServer.NSWebhookAgent.GetAllWebhooks(String,String,Integer)
   type: Method
   summary: "\nReturns all webhooks, according to filter criteria\n"
-  remarks: "\n<p></p>\n"
+  remarks: ""
   syntax: 
     content: NSWebhook[] GetAllWebhooks(String nameFilter, String eventFilter, Integer statusFilter)
     parameters:
