--- a/docs/api-reference/CRMScript.NetServer.NSWebhookResult.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSWebhookResult.yml
@@ -42,7 +42,7 @@ items:
   nameWithType: NSWebhookResult.GetMessage()
   fullName: CRMScript.NetServer.NSWebhookResult.GetMessage()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: String GetMessage()
@@ -62,7 +62,7 @@ items:
   nameWithType: NSWebhookResult.GetSuccess()
   fullName: CRMScript.NetServer.NSWebhookResult.GetSuccess()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Bool GetSuccess()
@@ -82,7 +82,7 @@ items:
   nameWithType: NSWebhookResult.SetMessage(String)
   fullName: CRMScript.NetServer.NSWebhookResult.SetMessage(String)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetMessage(String message)
@@ -104,7 +104,7 @@ items:
   nameWithType: NSWebhookResult.SetSuccess(Bool)
   fullName: CRMScript.NetServer.NSWebhookResult.SetSuccess(Bool)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetSuccess(Bool success)
