--- a/docs/api-reference/CRMScript.NetServer.NSWindowPosSize.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSWindowPosSize.yml
@@ -60,7 +60,7 @@ items:
   nameWithType: NSWindowPosSize.GetAssociateId()
   fullName: CRMScript.NetServer.NSWindowPosSize.GetAssociateId()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetAssociateId()
@@ -80,7 +80,7 @@ items:
   nameWithType: NSWindowPosSize.GetExtraId()
   fullName: CRMScript.NetServer.NSWindowPosSize.GetExtraId()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetExtraId()
@@ -100,7 +100,7 @@ items:
   nameWithType: NSWindowPosSize.GetExtraInfo()
   fullName: CRMScript.NetServer.NSWindowPosSize.GetExtraInfo()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: String GetExtraInfo()
@@ -120,7 +120,7 @@ items:
   nameWithType: NSWindowPosSize.GetHeight()
   fullName: CRMScript.NetServer.NSWindowPosSize.GetHeight()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetHeight()
@@ -140,7 +140,7 @@ items:
   nameWithType: NSWindowPosSize.GetLeftX()
   fullName: CRMScript.NetServer.NSWindowPosSize.GetLeftX()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetLeftX()
@@ -160,7 +160,7 @@ items:
   nameWithType: NSWindowPosSize.GetOwnerWindow()
   fullName: CRMScript.NetServer.NSWindowPosSize.GetOwnerWindow()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: String GetOwnerWindow()
@@ -180,7 +180,7 @@ items:
   nameWithType: NSWindowPosSize.GetPersonId()
   fullName: CRMScript.NetServer.NSWindowPosSize.GetPersonId()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetPersonId()
@@ -240,7 +240,7 @@ items:
   nameWithType: NSWindowPosSize.GetWidth()
   fullName: CRMScript.NetServer.NSWindowPosSize.GetWidth()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetWidth()
@@ -260,7 +260,7 @@ items:
   nameWithType: NSWindowPosSize.GetWindowPosSizeId()
   fullName: CRMScript.NetServer.NSWindowPosSize.GetWindowPosSizeId()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetWindowPosSizeId()
@@ -280,7 +280,7 @@ items:
   nameWithType: NSWindowPosSize.SetAssociateId(Integer)
   fullName: CRMScript.NetServer.NSWindowPosSize.SetAssociateId(Integer)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetAssociateId(Integer associateId)
@@ -302,7 +302,7 @@ items:
   nameWithType: NSWindowPosSize.SetExtraId(Integer)
   fullName: CRMScript.NetServer.NSWindowPosSize.SetExtraId(Integer)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetExtraId(Integer extraId)
@@ -324,7 +324,7 @@ items:
   nameWithType: NSWindowPosSize.SetExtraInfo(String)
   fullName: CRMScript.NetServer.NSWindowPosSize.SetExtraInfo(String)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetExtraInfo(String extraInfo)
@@ -346,7 +346,7 @@ items:
   nameWithType: NSWindowPosSize.SetHeight(Integer)
   fullName: CRMScript.NetServer.NSWindowPosSize.SetHeight(Integer)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetHeight(Integer height)
@@ -368,7 +368,7 @@ items:
   nameWithType: NSWindowPosSize.SetLeftX(Integer)
   fullName: CRMScript.NetServer.NSWindowPosSize.SetLeftX(Integer)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetLeftX(Integer leftX)
@@ -390,7 +390,7 @@ items:
   nameWithType: NSWindowPosSize.SetOwnerWindow(String)
   fullName: CRMScript.NetServer.NSWindowPosSize.SetOwnerWindow(String)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetOwnerWindow(String ownerWindow)
@@ -412,7 +412,7 @@ items:
   nameWithType: NSWindowPosSize.SetPersonId(Integer)
   fullName: CRMScript.NetServer.NSWindowPosSize.SetPersonId(Integer)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetPersonId(Integer personId)
@@ -434,8 +434,8 @@ items:
   nameWithType: NSWindowPosSize.SetState(Integer)
   fullName: CRMScript.NetServer.NSWindowPosSize.SetState(Integer)
   type: Method
-  summary: "\n\n"
-  remarks: "\n<p></p>\n"
+  summary: ""
+  remarks: ""
   syntax: 
     content: Void SetState(Integer state)
     parameters:
@@ -456,7 +456,7 @@ items:
   nameWithType: NSWindowPosSize.SetUpperY(Integer)
   fullName: CRMScript.NetServer.NSWindowPosSize.SetUpperY(Integer)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetUpperY(Integer upperY)
@@ -478,7 +478,7 @@ items:
   nameWithType: NSWindowPosSize.SetWidth(Integer)
   fullName: CRMScript.NetServer.NSWindowPosSize.SetWidth(Integer)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetWidth(Integer width)
@@ -500,7 +500,7 @@ items:
   nameWithType: NSWindowPosSize.SetWindowPosSizeId(Integer)
   fullName: CRMScript.NetServer.NSWindowPosSize.SetWindowPosSizeId(Integer)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetWindowPosSizeId(Integer windowPosSizeId)
