--- a/docs/api-reference/CRMScript.NetServer.NSProjectType.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSProjectType.yml
@@ -6,10 +6,10 @@ items:
   langs:
   - crmscript
   children:
+  - CRMScript.NetServer.NSProjectType.#ctor
   - CRMScript.NetServer.NSProjectType.GetId()
   - CRMScript.NetServer.NSProjectType.GetTooltip()
   - CRMScript.NetServer.NSProjectType.GetValue()
-  - CRMScript.NetServer.NSProjectType.#ctor
   - CRMScript.NetServer.NSProjectType.SetId(Integer)
   - CRMScript.NetServer.NSProjectType.SetTooltip(String)
   - CRMScript.NetServer.NSProjectType.SetValue(String)
@@ -19,66 +19,6 @@ items:
   type: Class
   summary: 
   example: 
-- uid: CRMScript.NetServer.NSProjectType.GetId()
-  commentId: M:CRMScript.NetServer.NSProjectType.GetId()
-  id: 'GetId()'
-  so.intellisense: NSProjectType.GetId
-  langs:
-  - crmscript
-  name: 'GetId()'
-  nameWithType: NSProjectType.GetId()
-  fullName: CRMScript.NetServer.NSProjectType.GetId()
-  type: Method
-  summary: "\nGets the primary key (ID) for the NSProjectType<p></p>\n<strong>Returns:</strong>Integer NSProjectType id.<p></p>\n<pre><code>NSProjectType thing;\nInteger id = thing.GetId();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: Integer GetId()
-    parameters: []
-    return:
-      type: CRMScript.Global.Integer
-      description:
-  example: 
-  - "\n<pre><code>NSProjectType thing;\nInteger id = thing.GetId();</code></pre>\n"
-- uid: CRMScript.NetServer.NSProjectType.GetTooltip()
-  commentId: M:CRMScript.NetServer.NSProjectType.GetTooltip()
-  id: 'GetTooltip()'
-  so.intellisense: NSProjectType.GetTooltip
-  langs:
-  - crmscript
-  name: 'GetTooltip()'
-  nameWithType: NSProjectType.GetTooltip()
-  fullName: CRMScript.NetServer.NSProjectType.GetTooltip()
-  type: Method
-  summary: "\nGets the tooltip description for the NSProjectType list item.<p></p>\n<strong>Returns:</strong>String NSProjectType tooltip description.<p></p>\n<pre><code>NSProjectType thing;\nString descr = thing.GetTooltip();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: String GetTooltip()
-    parameters: []
-    return:
-      type: CRMScript.Global.String
-      description:
-  example: 
-  - "\n<pre><code>NSProjectType thing;\nString descr = thing.GetTooltip();</code></pre>\n"
-- uid: CRMScript.NetServer.NSProjectType.GetValue()
-  commentId: M:CRMScript.NetServer.NSProjectType.GetValue()
-  id: 'GetValue()'
-  so.intellisense: NSProjectType.GetValue
-  langs:
-  - crmscript
-  name: 'GetValue()'
-  nameWithType: NSProjectType.GetValue()
-  fullName: CRMScript.NetServer.NSProjectType.GetValue()
-  type: Method
-  summary: "\nGets the name of the NSProjectType.<p></p>\n<strong>Returns:</strong>String NSProjectType name.<p></p>\n<pre><code>NSProjectType thing;\nString name = thing.GetValue();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: String GetValue()
-    parameters: []
-    return:
-      type: CRMScript.Global.String
-      description:
-  example: 
-  - "\n<pre><code>NSProjectType thing;\nString name = thing.GetValue();</code></pre>\n"
 - uid: CRMScript.NetServer.NSProjectType.#ctor
   commentId: M:CRMScript.NetServer.NSProjectType.#ctor
   id: '#ctor'
@@ -94,6 +34,66 @@ items:
   syntax: 
     content: NSProjectType
   example: 
+- uid: CRMScript.NetServer.NSProjectType.GetId()
+  commentId: M:CRMScript.NetServer.NSProjectType.GetId()
+  id: 'GetId()'
+  so.intellisense: NSProjectType.GetId
+  langs:
+  - crmscript
+  name: 'GetId()'
+  nameWithType: NSProjectType.GetId()
+  fullName: CRMScript.NetServer.NSProjectType.GetId()
+  type: Method
+  summary: "\nGets the primary key (ID) for the NSProjectType.\n"
+  remarks: 
+  syntax: 
+    content: Integer GetId()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+      description: NSProjectType ID
+  example: 
+  - "\n<pre><code>NSProjectType thing;\nInteger id = thing.GetId();</code></pre>\n"
+- uid: CRMScript.NetServer.NSProjectType.GetTooltip()
+  commentId: M:CRMScript.NetServer.NSProjectType.GetTooltip()
+  id: 'GetTooltip()'
+  so.intellisense: NSProjectType.GetTooltip
+  langs:
+  - crmscript
+  name: 'GetTooltip()'
+  nameWithType: NSProjectType.GetTooltip()
+  fullName: CRMScript.NetServer.NSProjectType.GetTooltip()
+  type: Method
+  summary: "\nGets the tooltip description for the NSProjectType list item.\n"
+  remarks: 
+  syntax: 
+    content: String GetTooltip()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: NSProjectType tooltip description
+  example: 
+  - "\n<pre><code>NSProjectType thing;\nString descr = thing.GetTooltip();</code></pre>\n"
+- uid: CRMScript.NetServer.NSProjectType.GetValue()
+  commentId: M:CRMScript.NetServer.NSProjectType.GetValue()
+  id: 'GetValue()'
+  so.intellisense: NSProjectType.GetValue
+  langs:
+  - crmscript
+  name: 'GetValue()'
+  nameWithType: NSProjectType.GetValue()
+  fullName: CRMScript.NetServer.NSProjectType.GetValue()
+  type: Method
+  summary: "\nGets the name of the NSProjectType.\n"
+  remarks: 
+  syntax: 
+    content: String GetValue()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: NSProjectType name
+  example: 
+  - "\n<pre><code>NSProjectType thing;\nString name = thing.GetValue();</code></pre>\n"
 - uid: CRMScript.NetServer.NSProjectType.SetId(Integer)
   commentId: M:CRMScript.NetServer.NSProjectType.SetId(Integer)
   id: 'SetId(Integer)'
