--- a/docs/api-reference/CRMScript.NetServer.NSProviderInfo.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSProviderInfo.yml
@@ -44,7 +44,7 @@ items:
   nameWithType: NSProviderInfo.GetName()
   fullName: CRMScript.NetServer.NSProviderInfo.GetName()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: String GetName()
@@ -84,7 +84,7 @@ items:
   nameWithType: NSProviderInfo.GetSupportsConfig()
   fullName: CRMScript.NetServer.NSProviderInfo.GetSupportsConfig()
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Bool GetSupportsConfig()
@@ -104,7 +104,7 @@ items:
   nameWithType: NSProviderInfo.SetName(String)
   fullName: CRMScript.NetServer.NSProviderInfo.SetName(String)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetName(String name)
@@ -126,7 +126,7 @@ items:
   nameWithType: NSProviderInfo.SetSupportedMessagingFormats(String[])
   fullName: CRMScript.NetServer.NSProviderInfo.SetSupportedMessagingFormats(String[])
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetSupportedMessagingFormats(String[] supportedMessagingFormats)
@@ -148,7 +148,7 @@ items:
   nameWithType: NSProviderInfo.SetSupportsConfig(Bool)
   fullName: CRMScript.NetServer.NSProviderInfo.SetSupportsConfig(Bool)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetSupportsConfig(Bool supportsConfig)
